# nexx98

./: .env  .env.example  Dockerfile  dockerfile  fly.toml  index.html  package.json  pyproject.toml  railway.json  requirements.txt  start.py
backend/: main.py
frontend/: app.js  index.html  sitemap.xml  styles.css
